--- a/ProyectoAplicadaI/UI/Cobro/CobrosdeEmpeño.resx
+++ b/ProyectoAplicadaI/UI/Cobro/CobrosdeEmpeño.resx
@@ -120,4 +120,84 @@
   <metadata name="GeneralerrorProvider.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="$this.TrayHeight" type="System.Int32, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <value>36</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAgBAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAY2+NVWJujv9ibo7/Ym6O/2Jujv9ibo7/Ym6O/2Ju
+        jv9ibo7/Ym6O/wAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABkbZIcY2+NVWBngd50d4n+dXiJ/3V4
+        if91eIn/c3WI/Ftlgqljb41VAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAfHqH/GuB
+        mf9chKf/XISn/1yEp/93fo7/mZCR2AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAD83Ln+z9HG/web/f8Amf//Mqbx//jcuv/73LrVAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAPzduNv83bn/l8LV/xWe+f/Z1MP//N25//3gvHoAAAAAAAAAAAAAAAAAAAAATYs+ITp+
+        MNBGiTyEVY5MGwAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA/9u8Kvvdufz83bn/5te///zduf/937ncAAAAAAAAAAAAAAAAAAAAAAAA
+        AABEiDuHHF8Q/x1hEv8eYBL/LnEi8Dp/L71BhzpmTYAaCgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA+dq6Wfzeuv783bn//N259P/msxQAAAAAAAAAAAAA
+        AAAAAAAAAAAAADt+MNAeYRL/HF8Q/yNnF/9MkUP/Nnst/x1gEf8iZhf+Nnkr40KHN6NNkkE/AAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA/N244Pzduf/727mHAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAKm4f+ChsHf8pax3/XaRW/2+5av9Dlzr/b7do/1+mV/9FiTv/KW0e/xxf
+        EP8maRr8OX0w1kSKOY5OkEguAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAPzeuaD53Lr/usvL//zd
+        uf3/3rk+AAAAAAAAAAAAAAAAAAAAAFCPRTAcYBD/XaNV/4HJe/9/x3n/QJY3/zeQLf84kC3/S55B/3a/
+        cP+ByXv/dLtt/1ifUP8+gjT/JGcY/xxfEP8tcCL1PIEzx0WMPXZSj0cZAAAAAAAAAAD93bpo/N25/262
+        4f8Fmv7/u8zL//vcuPn/378QAAAAAAAAAAAAAAAARIk5lx1gEP93vnH/gcl7/2WwXv84kC7/N5At/zeQ
+        Lf9Imj7/OZEv/2CsWf9+x3n/gcl7/4HJe/+AyHr/arBi/0uRQv8wdCb/HmES/x5hEv8wcyTxPIEzx/jb
+        tfja1ML/RKzs/0Or7P9hs+T/+925//7duasAAAAAAAAAAAAAAAA4fC3cL3Mk/4HJe/98xHb/PJMy/2Os
+        XP9aplL/dbhv/6TWof95u3P/Qpc5/z+WNv9GjT3/Jmka/0mNP/97xHb/gcl7/4HJe/9/x3n/abBi/06T
+        Rf8zdyf/+9y4//zduf/83bn//N25//zduf/83bn/+9651gAAAAAAAAAAAAAAACVpGvxKj0H/gcl7/1Wj
+        TP9FmTz/otWe/6XXov+l16L/pdei/6XXov+f05v/Zq9g/zmRL/9JmkD/OH0u/zV5K/+AyHr/gcl7/4HJ
+        e/+ByXv/gcl7/4HJe/9ATG7/QExu/0BMbv9ATG7/QExu/0BMbv9pa3/ZAAAAAAAAAABJkj5GHF8Q/2Sq
+        Xf94v3D/OJAu/4HAfP+l16L/pdei/6XXov+l16L/pdei/6XXov+l16L/ls2S/1ilUP84kS7/TZlE/2Kp
+        Wv+ByXv/gcl7/4HJe/97tX//bIyI/2h+iP95f47/gIOT/4CDlP+AgpP+d3yR7GBsi71ibo6rAAAAAEKG
+        OKceYhP/e8N1/02eRP9Tokv/pdei/6PWoP9+vnn/ksuP/6XXov+l16L/pdei/6XXov+l16L/pdei/4bC
+        gf9Imz//PZQ0/2q0Y/9/yHv/gcl7/3u1f/9sjIj/bIyI/2WEf/9ScWv/Tmxo/mJujqtibo6rYm6Oq2Ju
+        jqsAAAAAM3kr5CRpGf9co1T/OJEu/5HKjf+l16L/dLdu/zeQLf89lDT/otWe/6XXov+l16L/pdei/6XX
+        ov+e05v/otWe/6PWoP91uG//P5U1/0mcP/9xumz/aK9g/3/Hef+ByXv/gcl7/zF2J/85fTDWAAAAAAAA
+        AAAAAAAAAAAAAEC/QAQhYxX+JGcY/0GWOP9lrV3/pdei/6XXov9+vXj/N5At/0WZPP+j1qD/pdei/6XX
+        ov92uXD/Qpc5/zeQLf86kjD/X6pX/5zRmf+c0Zn/Y6xc/zmRL/9NmkX/U5pL/4HJe/97wnT/HmAR/0SK
+        OY4AAAAAAAAAAAAAAAAAAAAAR448YRxfEP9Nl0X/OZEv/1qnUv+j1qD/pdei/6XXov+VzZH/oNOc/6XX
+        ov+l16L/cbVq/zeQLf83kC3/N5At/zeQLf83kC3/S51C/6LVn/+l16L/ksqN/1SiTP87kjH/ZbBe/2Kn
+        Wf8dYBH/TYs+IQAAAAAAAAAAAAAAAAAAAABVlUAMVZtLnDiQL/83kC3/N5At/4fEgv+l16L/pdei/6XX
+        ov+l16L/pdei/57Tmv87kjH/N5At/zeQLf83kC3/N5At/zeQLf83kC3/d7py/6XXov+l16L/pdei/4jE
+        g/9KnEH/QZY4/0iPP/sA/wABAAAAAAAAAAAAAAAAAAAAAAAAAABlrmF0P5U1/TiRL/86kS//ls2S/6XX
+        ov+l16L/pdei/6XXov+l16L/isaF/zeQLf83kC3/N5At/zeQLf83kC3/N5At/zeQLf9eqVb/pdei/6XX
+        ov+l16L/pdei/6PWoP93uXH/PpQ0/0ebP/Rqr2FZAAAAAAAAAAAAAAAAAAAAAAAAAABormgWWqhTxDqS
+        Mf9KnED/iMSD/6XXov+l16L/pdei/6XXov+OyIr/N5At/zeQLf83kC3/N5At/zeQLf83kC3/N5At/2Gs
+        Wv+l16L/pdei/6XXov+l16L/pdei/6XXov9MnkP/OJAu/zeRLv9YpVHRAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAZ65hT02fRu04kC7/X6lY/5rPlv+l16L/pdei/6LVn/9EmDz/N5At/zeQLf83kC3/N5At/zeQ
+        Lf83kC3/gL97/6XXov+l16L/pdei/6XXov+l16L/pdei/0mcQP83kC3/OJEu/1qlUsoAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAGOuXYFGmjz5PJMz/3K2a/+h1J7/pdei/4LBff84kS7/N5At/zeQ
+        Lf83kC3/N5At/1qmUv+k16H/pdei/6DTnP98vXf/mM+U/6XXov+l16L/jseK/0KXOf8/ljX9arBqHQAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAIC2Ww5eqFe2PpU0/kWZO/+EwX//pdei/4zH
+        h/9YpVD/Rpo9/1CgSP96u3T/o9ag/6XXov+l16L/ZK1d/zeQLf9Jm0H/pdei/6XXov+IxYP/N5At/2Ks
+        WpcAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABtsGcqVKNN3TiR
+        Lv9RoUn/kMmL/6XXov+l16L/pdei/6XXov+l16L/pdei/6XXov9utGf/N5At/1OiS/+l16L/o9ag/0qd
+        Qv9LnULygP+AAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAZrRgVU2eRO84kS7/Zq9g/53Smf+l16L/pdei/6XXov+l16L/pdei/6TXof+Sy4//otWf/6XX
+        ov92uG//OJEu/2ivYF0AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAgP+AAmKsXJlDmDn8PpU0/3W4b/+j1qD/pdei/6XXov+l16L/pdei/6XX
+        ov+l16L/ndKa/z+VNv9XpE/TAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHC/YBBcp1TAO5Ix/0mbQf+IxIP/pdei/6XX
+        ov+l16L/pdei/6XXov9krV3/PpU1/mu1ayYAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABpsmQ4U6JK4ziQ
+        Lv9XpE//lMyQ/32+d/9Gmj7/VaRN/zmRL/9gq1mkAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAZ65daEqdQfQ6kjD/PZQ0/zeQLf85kS//R5k+94DVgAYAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAgP+AAmevYZlBljb9OJAu/ziRLf9qsWVlAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAHG4cRJcqFW8VqVPzwAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA///+AP///wH///8B////Af///wPz//+D4H//x+AH/8fgAH+H4AAPg8AA
+        AAHAAAABwAAAAcAAAACAAAAAgAAAD4AAAA+AAAAfgAAAH8AAAA/gAAAD+AAAA/wAAAf/AAAH/8AAD//w
+        AB//+AAf//4AP///gD///+B////w/////P8=
+</value>
+  </data>
 </root>
